--- a/quotation.html
+++ b/quotation.html
@@ -80,7 +80,7 @@
     justify-content: flex-start;
     font-size: 12px;
     margin: 8px 0;
-    gap: 1%;
+    gap: 4px;
 }
     .label-row span:first-child {
     width: 250px;  /* Atur agar semua label panjangnya sama */
@@ -112,7 +112,7 @@
     white-space: nowrap;       /* jangan putus kalimat */
     overflow: hidden;
     text-overflow: ellipsis;   /* kasih "..." kalau kepanjangan */
-    gap: 1%;
+    gap: 4px;
   }
     .label-row span:first-child {
     width: 180px;  /* Atur agar semua label panjangnya sama */
@@ -135,15 +135,15 @@
       display: none !important;
     }
       .logo-header img {
-  width: 100px;
-  height: auto;
-  object-fit: contain;
+      width: 100px;
+      height: auto;
+      object-fit: contain;
 }
       th {
-    background-color: black !important;
-    -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
-    print-color-adjust: exact;         /* untuk Firefox */
-    color: white;
+      background-color: black !important;
+      -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
+      print-color-adjust: exact;         /* untuk Firefox */
+      color: white;
   }
        .invoice-container {
       max-width: 800px;
