--- a/quotation.html
+++ b/quotation.html
@@ -139,6 +139,19 @@
       height: auto;
       object-fit: contain;
 }
+       .label-row {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    font-size: 12px;
+    margin: 8px 0;
+    gap: 4px;
+}
+    .label-row span:first-child {
+    width: 250px;  /* Atur agar semua label panjangnya sama */
+    text-align: left;
+    white-space: nowrap;
+    }
       th {
       background-color: black !important;
       -webkit-print-color-adjust: exact; /* untuk Chrome & Safari */
