--- a/quotation.html
+++ b/quotation.html
@@ -141,7 +141,7 @@
 }
        .label-row {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: flex-start;
     font-size: 12px;
     margin: 8px 0;
@@ -150,7 +150,7 @@
     .label-row span:first-child {
     width: 250px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
-    white-space: nowrap;
+    white-space: wrap;
     }
       th {
       background-color: black !important;
