--- a/quotation.html
+++ b/quotation.html
@@ -10,7 +10,7 @@
       padding: 20px;
     }
      .invoice-container {
-      max-width: 800px;
+      max-width: 1000px;
       margin: auto;
       background: white;
       padding: 20px;
@@ -141,7 +141,7 @@
 }
        .label-row {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: flex-start;
     font-size: 12px;
     margin: 8px 0;
@@ -150,7 +150,7 @@
     .label-row span:first-child {
     width: 250px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
-    white-space: wrap;
+    white-space: nowrap;
     }
       th {
       background-color: black !important;
