--- a/quotation.html
+++ b/quotation.html
@@ -104,6 +104,14 @@
   object-fit: contain;
 }
     @media screen and (max-width: 768px) {
+      .invoice-container {
+      max-width: 1000px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
   .label-row {
     flex-direction: column;
     align-items: flex-start;
@@ -134,6 +142,7 @@
        .button-group {
       display: none !important;
     }
+        
       .logo-header img {
       width: 100px;
       height: auto;
