--- a/quotation.html
+++ b/quotation.html
@@ -10,7 +10,7 @@
       padding: 20px;
     }
      .invoice-container {
-      max-width: 1000px;
+      max-width: 900px;
       margin: auto;
       background: white;
       padding: 20px;
@@ -131,11 +131,14 @@
        max-width: 80px;
     margin-top: 10px;
     }
-      td {
+    td {
       border: 1px solid #000;
       padding: 4px 6px; /* atas-bawah: 4px, kiri-kanan: 6px */
       text-align: left;
       font-size: 7px;
+    }
+    th {
+      font-size: 9px;
     }
 }
     @media print {
@@ -203,7 +206,7 @@
   </div>
   
   <div class="header-line"></div>
-  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 20px; font-weight: bold;">Equipments</p>
+  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold;">Equipments</p>
   
 
   <!-- Tabel Equipments -->
@@ -217,7 +220,7 @@
 
 
   <!-- Tabel Guard and Others -->
-  <p style="margin-bottom: 0px; margin-top: 0px; font-size: 20px; font-weight: bold;">Guard and Others</p>
+  <p style="margin-bottom: 0px; margin-top: 0px; font-size: 16px; font-weight: bold;">Guard and Others</p>
   <table style="margin-top: 5px;" id="guard-table">
     <thead>
       <tr>
