--- a/invoice.html
+++ b/invoice.html
@@ -72,7 +72,7 @@
       text-align: right;
     }
 
-    @media screen (max-width: 600px) {
+    @media (max-width: 768px) {
       body {
         padding: 10px;
       }
@@ -91,7 +91,7 @@
       width: 200px; /* Bisa diatur sesuai kebutuhan */
     }
   .invoice-container {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       background: white;
       padding: 20px;
@@ -198,8 +198,10 @@
     <button onclick="saveSignature()">Save</button>
     <button onclick="window.print()">Print</button>
   </div>
-  <div id="saved-signature"></div>
+  <div id="saved-signature">
   <div id="signature-placeholder" style="display:none;"></div>
+  </div>
+  
   <p style="font-weight: normal, font-size: 20px;"id="username"></p>
   <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
