--- a/invoice.html
+++ b/invoice.html
@@ -71,6 +71,13 @@
       font-weight: bold;
       text-align: right;
     }
+    #signature-placeholder {
+    display: none; /* Sembunyi dulu */
+    width: 200px;
+    height: 80px;
+    margin-top: 20px;
+    border-bottom: 1px solid #000;
+  }
 
     @media (max-width: 768px) {
       body {
@@ -89,6 +96,11 @@
       border-bottom: 1px solid #000;
       margin-top: 20px;
       width: 200px; /* Bisa diatur sesuai kebutuhan */
+    }
+   #saved-signature img {
+      display: block;
+      max-width: 200px;
+      margin-top: 20px;
     }
   .invoice-container {
       max-width: 900px;
@@ -357,11 +369,13 @@ const textAmount = toTitleCase(textAmountRaw);
     const dataURL = canvas.toDataURL("image/png");
     const img = document.createElement("img");
     img.src = dataURL;
-    img.style.maxWidth = "100px";
+    img.style.maxWidth = "200px";
     img.style.marginTop = "0px";
     document.getElementById("saved-signature").innerHTML = "";
     document.getElementById("saved-signature").appendChild(img);
   }
+</script>
+
 </script>
 
 </script>
