--- a/quotation.html
+++ b/quotation.html
@@ -264,7 +264,7 @@
     <button onclick="window.print()">Print</button>
   </div>
   <p id="username"></p>
-  <p style="margin-top: 10px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
+  <p style="margin-top: 10px; margin-bottom: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
   
   <script>
