--- a/invoice.html
+++ b/invoice.html
@@ -21,7 +21,7 @@
       position: relative;
       z-index: 1;
       height: 100px;
-      width: 100px
+      width: 100px;
       margin-top: 15px;
     }
     .invoice-container {
@@ -152,6 +152,7 @@
     .label-row span:first-child {
   width: 200px;  /* Atur agar semua label panjangnya sama */
   text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -214,7 +215,7 @@
   <div id="signature-placeholder" style="display:none;"></div>
   </div>
   
-  <p style="font-weight: normal, font-size: 20px;"id="username"></p>
+  <p style="font-weight: normal; font-size: 20px;"id="username"></p>
   <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
 
