--- a/invoice.html
+++ b/invoice.html
@@ -213,11 +213,7 @@
 
 
   <p style="margin-top: 30px; font-weight: normal; font-size: 15px;">Regards,</p>
-  <canvas id="signature-pad" class="signature-pad">
-  <div id="signature-empty" style="height: 200px; border-bottom: 2px solid #000; margin-top: 20px;">
-    <!-- Ini garis kosong buat tanda tangan manual -->
-  </div>
-  </canvas>
+  <canvas id="signature-pad" class="signature-pad"></canvas>
   <div class="button-group">
     <button onclick="clearSignature()">Clear</button>
     <button onclick="saveSignature()">Save</button>
