--- a/invoice.html
+++ b/invoice.html
@@ -87,6 +87,13 @@
         font-size: 15px;
         font-family: Calibri;
       }
+       #wgs-logo {
+      position: relative;
+      z-index: 1;
+      height: 80px;
+      width: 120px;
+      margin-top: 15px;
+    }
     }
 @media print {
       #signature-pad, .button-group {
