--- a/quotation.html
+++ b/quotation.html
@@ -103,7 +103,7 @@
   height: auto;
   object-fit: contain;
 }
-    @media (max-width: 600px) {
+    @media screen and (max-width: 600px) {
       .invoice-container {
       max-width: 900px;
       margin: auto;
