--- a/invoice.html
+++ b/invoice.html
@@ -71,13 +71,6 @@
       font-weight: bold;
       text-align: right;
     }
-    #signature-placeholder {
-    display: block; /* Sembunyi dulu */
-    width: 200px;
-    height: 80px;
-    margin-top: 20px;
-    border-bottom: 1px solid #000;
-  }
 
     @media (max-width: 768px) {
       body {
@@ -111,12 +104,7 @@
         font-family: Calibri;
       }
   .invoice-container {
-      max-width: 900px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: none;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 }
    .signature-pad {
