--- a/invoice.html
+++ b/invoice.html
@@ -87,6 +87,25 @@
       width: 120px;
       margin-top: 15px;
     }
+      @media print {
+      #signature-pad, .button-group {
+    display: none !important;
+    height: 0 !important;
+    visibility: hidden;
+      }
+   #saved-signature img {
+      display: block;
+      max-width: 200px;
+      margin-top: 20px;
+    }
+  h1 {
+        font-size: 15px;
+        font-family: Calibri;
+      }
+  .invoice-container {
+      box-shadow: none;
+    }
+}
     }
 @media print {
       #signature-pad, .button-group {
@@ -104,7 +123,7 @@
         font-family: Calibri;
       }
   .invoice-container {
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: none;
     }
 }
    .signature-pad {
