--- a/quotation.html
+++ b/quotation.html
@@ -176,7 +176,7 @@
       background: white;
       padding: 15px;
       border-radius: 10px;
-      box-shadow: none;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     }
   </style>
