--- a/invoice.html
+++ b/invoice.html
@@ -32,7 +32,7 @@
       border-radius: 10px;
       box-shadow: none;
     }
-         .header-line {
+    .header-line {
     border-bottom: 2px solid black;
     padding-bottom: 10px;
     margin-bottom: 20px;
@@ -115,6 +115,9 @@
     }
 
     @media (max-width: 768px) {
+      body {
+        padding: 10px;
+      }
       h1 {
         font-size: 15px;
         font-family: Calibri;
