--- a/invoice.html
+++ b/invoice.html
@@ -120,7 +120,7 @@
       }
       h1 {
         font-size: 15px;
-        font-family: Calibri;
+        font-family: Nunito, sans-serif;
       }
        #wgs-logo {
       position: relative;
