--- a/invoice.html
+++ b/invoice.html
@@ -6,7 +6,7 @@
   <title>Invoice</title>
   <style>
     body {
-      font-family: Calibri;
+      font-family: Nunito, sans-serif;
       margin: 0;
       padding: 20px;
       background: #f5f5f5;
@@ -117,6 +117,7 @@
     @media (max-width: 768px) {
       body {
         padding: 10px;
+        font-family: Nunito, sans-serif;
       }
       h1 {
         font-size: 15px;
