--- a/invoice.html
+++ b/invoice.html
@@ -118,6 +118,7 @@
       body {
         padding: 10px;
         font-family: Nunito, sans-serif;
+        font-size: 12px;
       }
       h1 {
         font-size: 15px;
@@ -144,7 +145,7 @@
     }
   h1 {
         font-size: 15px;
-        font-family: Calibri;
+        font-family: Nunito, sans-serif;
       }
   .invoice-container {
       box-shadow: none;
