--- a/invoice.html
+++ b/invoice.html
@@ -115,6 +115,10 @@
     }
 
     @media (max-width: 768px) {
+       .label-row {
+    font-size: 12px;
+       }
+
       body {
         padding: 10px;
         font-family: Nunito, sans-serif;
