--- a/invoice.html
+++ b/invoice.html
@@ -42,7 +42,8 @@
       text-align: left;
       margin-bottom: 0px;
       margin-top: 90px;
-      font-size: 30px;
+      font-size: 20px;
+      font-family: Nunito, sans-serif;
     }
 
     table {
@@ -118,7 +119,6 @@
        .label-row {
     font-size: 12px;
        }
-
       body {
         padding: 10px;
         font-family: Nunito, sans-serif;
@@ -152,6 +152,11 @@
         font-family: Nunito, sans-serif;
       }
   .invoice-container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
       box-shadow: none;
     }
 }
@@ -216,7 +221,7 @@
   </div>
   <div id="saved-signature"></div>
   
-  <p style="font-weight: normal; font-size: 20px;"id="username"></p>
+  <p style="font-weight: normal; font-size: 15px;"id="username"></p>
   <p style="margin-top: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
   </div>
 
