--- a/invoice.html
+++ b/invoice.html
@@ -152,12 +152,10 @@
         font-family: Nunito, sans-serif;
       }
   .invoice-container {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: none;
+    background: none !important;
+    box-shadow: none !important;
+    border: none !important;
+    border-radius: 0 !important;
     }
 }
 
