--- a/invoice.html
+++ b/invoice.html
@@ -152,7 +152,7 @@
         font-family: Nunito, sans-serif;
       }
   .invoice-container {
-    background: none !important;
+    background: white;
     box-shadow: none !important;
     border: none !important;
     border-radius: 0 !important;
