--- a/invoice.html
+++ b/invoice.html
@@ -152,10 +152,11 @@
         font-family: Nunito, sans-serif;
       }
   .invoice-container {
-    background: white;
+    background: transparent;
     box-shadow: none !important;
     border: none !important;
     border-radius: 0 !important;
+    outline: none !important;
     }
 }
 
