--- a/invoice.html
+++ b/invoice.html
@@ -9,7 +9,7 @@
       font-family: Nunito, sans-serif;
       margin: 0;
       padding: 20px;
-      background: #f5f5f5;
+      background: white;
     }
      #logo-container {
       position: relative;
@@ -152,7 +152,7 @@
         font-family: Nunito, sans-serif;
       }
   .invoice-container {
-    background: transparent;
+    background: white;
     box-shadow: none !important;
     border: none !important;
     border-radius: 0 !important;
