--- a/invoice.html
+++ b/invoice.html
@@ -30,7 +30,7 @@
       background: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: none;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     .header-line {
     border-bottom: 2px solid black;
