--- a/invoice.html
+++ b/invoice.html
@@ -137,6 +137,10 @@
     }
     }
 @media print {
+  body {
+    margin: 0;
+    padding: 0;
+  }
       #signature-pad, .button-group {
     display: none !important;
     height: 0 !important;
@@ -157,6 +161,9 @@
     border: none !important;
     border-radius: 0 !important;
     outline: none !important;
+    width: 100%;
+    margin: 20mm 15mm 20mm 15mm; /* top, right, bottom, left */
+    padding: 0;
     }
 }
 
