--- a/invoice.html
+++ b/invoice.html
@@ -137,10 +137,7 @@
     }
     }
 @media print {
-  body {
-    margin: 0;
-    padding: 0;
-  }
+  
       #signature-pad, .button-group {
     display: none !important;
     height: 0 !important;
@@ -161,9 +158,8 @@
     border: none !important;
     border-radius: 0 !important;
     outline: none !important;
-    width: 100%;
-    margin: 20mm 15mm 20mm 15mm; /* top, right, bottom, left */
-    padding: 0;
+    margin: auto;
+    padding: auto;
     }
 }
 
