--- a/quotation.html
+++ b/quotation.html
@@ -7,13 +7,14 @@
   <style>
     body {
       font-family: Calibri;
-      padding: 20px;
+      padding: auto;
+      margin: auto;
     }
      .invoice-container {
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: 20px;
+      padding: auto;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
@@ -108,7 +109,7 @@
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: 20px;
+      padding: auto;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
@@ -174,7 +175,7 @@
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: 15px;
+      padding: auto;
       border-radius: 10px;
       box-shadow: none;
     }
