--- a/quotation.html
+++ b/quotation.html
@@ -7,14 +7,13 @@
   <style>
     body {
       font-family: Calibri;
-      padding: auto;
-      margin: auto;
+      padding: 20px;
     }
      .invoice-container {
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: auto;
+      padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
@@ -109,7 +108,7 @@
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: auto;
+      padding: 40px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
