--- a/quotation.html
+++ b/quotation.html
@@ -108,7 +108,7 @@
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: 40px;
+      padding: 5px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
@@ -147,8 +147,8 @@
     }
         
       .logo-header img {
-      width: 100px;
-      height: auto;
+      width: 150px;
+      height: 100px;
       object-fit: contain;
 }
        .label-row {
@@ -174,7 +174,7 @@
       max-width: 900px;
       margin: auto;
       background: white;
-      padding: auto;
+      padding: 5px;
       border-radius: 10px;
       box-shadow: none;
     }
