--- a/quotation.html
+++ b/quotation.html
@@ -6,7 +6,7 @@
   <title>Quotation</title>
   <style>
     body {
-      font-family: Calibri;
+      font-family: Nunito, sans-serif;
       padding: 20px;
     }
      .invoice-container {
@@ -81,6 +81,7 @@
     font-size: 12px;
     margin: 8px 0;
     gap: 4px;
+    font-family: Nunito, sans-serif;
 }
     .label-row span:first-child {
     width: 250px;  /* Atur agar semua label panjangnya sama */
@@ -104,6 +105,9 @@
   object-fit: contain;
 }
     @media screen and (max-width: 600px) {
+      body {
+        font-family: Nunito, sans-serif;
+      }
       .invoice-container {
       max-width: 900px;
       margin: auto;
@@ -121,6 +125,7 @@
     overflow: hidden;
     text-overflow: ellipsis;   /* kasih "..." kalau kepanjangan */
     gap: 4px;
+    font-family: Nunito, sans-serif;
   }
     .label-row span:first-child {
     width: 180px;  /* Atur agar semua label panjangnya sama */
@@ -142,6 +147,9 @@
     }
 }
     @media print {
+      body {
+        font-family: Nunito, sans-serif;
+      }
        .button-group {
       display: none !important;
     }
@@ -158,6 +166,7 @@
     font-size: 12px;
     margin: 8px 0;
     gap: 4px;
+    font-family: Nunito, sans-serif;
 }
     .label-row span:first-child {
     width: 250px;  /* Atur agar semua label panjangnya sama */
@@ -206,7 +215,7 @@
   </div>
   
   <div class="header-line"></div>
-  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold;">Equipments</p>
+  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold; font-family: Nunito, sans-serif;">Equipments</p>
   
 
   <!-- Tabel Equipments -->
@@ -220,7 +229,7 @@
 
 
   <!-- Tabel Guard and Others -->
-  <p style="margin-bottom: 0px; margin-top: 0px; font-size: 16px; font-weight: bold;">Guard and Others</p>
+  <p style="margin-bottom: 0px; margin-top: 0px; font-size: 16px; font-weight: bold; font-family: Nunito, sans-serif;">Guard and Others</p>
   <table style="margin-top: 5px;" id="guard-table">
     <thead>
       <tr>
@@ -259,11 +268,11 @@
   </div>
 
   <!-- Signature Pad -->
-  <p style="margin-top: 10px; font-weight: normal; font-size: 15px;">Regards,</p>
+  <p style="margin-top: 10px; font-weight: normal; font-size: 15px; font-family: Nunito, sans-serif;">Regards,</p>
   <div class="button-group">
     <button onclick="window.print()">Print</button>
   </div>
-  <p style="margin-top: 10px; margin-bottom: 0px; font-weight: bold; font-size: 15px;">PT Warna Global Surya</p>
+  <p style="margin-top: 10px; margin-bottom: 0px; font-weight: bold; font-size: 15px; font-family: Nunito, sans-serif;">PT Warna Global Surya</p>
  
   
   <script>
