--- a/invoice.html
+++ b/invoice.html
@@ -211,7 +211,7 @@
     <span>: <span id="grand-total"></span></span>
     </div>
   
-    <div style="font-size: 12px; font-style: italic;" class="note" id="grand-total-text"></div>
+    <div style="font-size: 12px; font-style: italic; margin-top: 0px; margin-bottom: 10px;" class="note" id="grand-total-text"></div>
 
   <div class="label-row">
   <span>Bank Name</span>
