--- a/contract.html
+++ b/contract.html
@@ -18,6 +18,14 @@
       padding: 40px;
       line-height: 1.6;
     }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
 
     @media print {
       body {
@@ -47,6 +55,7 @@
 </head>
 <body>
 
+  <div class="container">
   <!-- Mulai Konten Di Sini -->
   <div class="section center">
     <h2>CONTRACT AGREEMENT</h2>
@@ -54,7 +63,7 @@
     <h3>WITH WORKING TITLE</h3>
     <h2 style="font-style: italic;">“<span id="projectName">[Project Name]</span>”</h2>
   </div>
-
+  </div>
   <!-- Konten selanjutnya akan ditambahkan di sini -->
 
 </body>
