--- a/contract.html
+++ b/contract.html
@@ -65,6 +65,10 @@
   </div>
   </div>
   <!-- Konten selanjutnya akan ditambahkan di sini -->
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const projectName = urlParams.get("projectName") || "";
+  </script>
 
 </body>
 </html>
