--- a/invoice.html
+++ b/invoice.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Invoice</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" />
+
   <style>
     body {
-      font-family: Nunito, sans-serif;
+      font-family: 'Nunito', sans-serif;
       margin: 0;
       padding: 20px;
       background: white;
@@ -121,12 +124,12 @@
        }
       body {
         padding: 10px;
-        font-family: Nunito, sans-serif;
+        font-family: 'Nunito', sans-serif;
         font-size: 12px;
       }
       h1 {
         font-size: 15px;
-        font-family: Nunito, sans-serif;
+        font-family: 'Nunito', sans-serif;
       }
        #wgs-logo {
       position: relative;
@@ -150,7 +153,7 @@
     }
   h1 {
         font-size: 15px;
-        font-family: Nunito, sans-serif;
+        font-family: 'Nunito', sans-serif;
       }
   .invoice-container {
     background: white;
