--- a/quotation.html
+++ b/quotation.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quotation</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" />
+  
   <style>
     body {
-      font-family: Nunito, sans-serif;
+      font-family: 'Nunito', sans-serif;
       padding: 20px;
     }
      .invoice-container {
@@ -106,7 +109,7 @@
 }
     @media screen and (max-width: 600px) {
       body {
-        font-family: Nunito, sans-serif;
+        font-family: 'Nunito', sans-serif;
       }
       .invoice-container {
       max-width: 900px;
@@ -148,7 +151,7 @@
 }
     @media print {
       body {
-        font-family: Nunito, sans-serif;
+        font-family: 'Nunito', sans-serif;
       }
        .button-group {
       display: none !important;
@@ -215,7 +218,7 @@
   </div>
   
   <div class="header-line"></div>
-  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold; font-family: Nunito, sans-serif;">Equipments</p>
+  <p style="margin-bottom: 0px; margin-top: 10px; font-size: 16px; font-weight: bold; font-family: 'Nunito', sans-serif;">Equipments</p>
   
 
   <!-- Tabel Equipments -->
@@ -229,7 +232,7 @@
 
 
   <!-- Tabel Guard and Others -->
-  <p style="margin-bottom: 0px; margin-top: 0px; font-size: 16px; font-weight: bold; font-family: Nunito, sans-serif;">Guard and Others</p>
+  <p style="margin-bottom: 0px; margin-top: 0px; font-size: 16px; font-weight: bold; font-family: 'Nunito', sans-serif;">Guard and Others</p>
   <table style="margin-top: 5px;" id="guard-table">
     <thead>
       <tr>
@@ -268,11 +271,11 @@
   </div>
 
   <!-- Signature Pad -->
-  <p style="margin-top: 10px; font-weight: normal; font-size: 15px; font-family: Nunito, sans-serif;">Regards,</p>
+  <p style="margin-top: 10px; font-weight: normal; font-size: 15px; font-family: 'Nunito', sans-serif;">Regards,</p>
   <div class="button-group">
     <button onclick="window.print()">Print</button>
   </div>
-  <p style="margin-top: 10px; margin-bottom: 0px; font-weight: bold; font-size: 15px; font-family: Nunito, sans-serif;">PT Warna Global Surya</p>
+  <p style="margin-top: 10px; margin-bottom: 0px; font-weight: bold; font-size: 15px; font-family: 'Nunito', sans-serif;">PT Warna Global Surya</p>
  
   
   <script>
