--- a/contract.html
+++ b/contract.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -64,12 +64,31 @@
     <h2 style="font-style: italic;">“<span id="projectName">[Project Name]</span>”</h2>
   </div>
   </div>
+
+  <p>
+  Agreement with these terms and conditions constitute an agreement between parties which production in this thing represented by <strong>{productionHouse}</strong> (next called <strong>Tenant Party</strong>) with party <strong>PT. WARNA GLOBAL SURYA</strong> as rental of film production equipment (next called <strong>Rental Party</strong>) for a Film production with working title "<strong>{projectName}</strong>" Film.
+</p>
+
+<p>
+  This agreement renting equipment for Film on <strong>{date}</strong> with Quotation Number <strong>{quoteNumber}</strong> and have obtained approval from Tenant Party with production cost <strong>{grandTotal}</strong> <em>{grandTotalText}</em> gross for <strong>{totalDays}</strong> shooting days, and if the use of those equipment exceeds <strong>{totalDays}</strong> days, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+</p>
+
   <!-- Konten selanjutnya akan ditambahkan di sini -->
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const projectName = urlParams.get("projectName") || "";
+    const productionHouse = urlParams.get("productionHouse") || "";
+    const date = urlParams.get("date") || "";
+    const quoteNumber = urlParams.get("quoteNumber") || "";
+    const grandTotal = urlParams.get("grandTotal") || "0";
+    const totalDays = urlParams.get("totalDays") || "";
 
     document.getElementById("projectName").innerText = projectName;
+    document.getElementById("productionHouse").innerText = productionHouse;
+    document.getElementById("date").innerText = date;
+    document.getElementById("quoteNumber").innerText = quoteNumber;
+    document.getElementById("grandTotal").innerText = grandTotal;
+    document.getElementById("totalDays").innerText = totalDays;
   </script>
 
 </body>
