--- a/contract.html
+++ b/contract.html
@@ -66,11 +66,11 @@
   
 
   <p>
-  Agreement with these terms and conditions constitute an agreement between parties which production in this thing represented by <strong>{productionHouse}</strong> (next called <strong>Tenant Party</strong>) with party <strong>PT. WARNA GLOBAL SURYA</strong> as rental of film production equipment (next called <strong>Rental Party</strong>) for a Film production with working title "<strong>{projectName}</strong>" Film.
+  Agreement with these terms and conditions constitute an agreement between parties which production in this thing represented by <strong id="production-house">[Production House]</strong> (next called <strong>Tenant Party</strong>) with party <strong>PT. WARNA GLOBAL SURYA</strong> as rental of film production equipment (next called <strong>Rental Party</strong>) for a Film production with working title "<strong id="project-name">[Project Name]</strong>" Film.
   </p>
 
   <p>
-  This agreement renting equipment for Film on <strong>{date}</strong> with Quotation Number <strong>{quoteNumber}</strong> and have obtained approval from Tenant Party with production cost <strong>{grandTotal}</strong> <em>{grandTotalText}</em> gross for <strong>{totalDays}</strong> shooting days, and if the use of those equipment exceeds <strong>{totalDays}</strong> days, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+  This agreement renting equipment for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> <em id="grand-total-text">[Grand Total Text</em> gross for <strong id="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipment exceeds <strong id="total-days">[Shooting Days]</strong>, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
   </p>
   </div>
   
