--- a/contract.html
+++ b/contract.html
@@ -61,16 +61,16 @@
     <h2>CONTRACT AGREEMENT</h2>
     <h3>FILM PRODUCTION EQUIPMENT RENT</h3>
     <h3>WITH WORKING TITLE</h3>
-    <h2 style="font-style: italic;">“<span id="project-name">[Project Name]</span>”</h2>
+    <h2 style="font-style: italic;">“<span class="project-name">[Project Name]</span>”</h2>
   </div>
   
 
   <p>
-  Agreement with these terms and conditions constitute an agreement between parties which production in this thing represented by <strong id="production-house">[Production House]</strong> (next called <strong>Tenant Party</strong>) with party <strong>PT. WARNA GLOBAL SURYA</strong> as rental of film production equipment (next called <strong>Rental Party</strong>) for a Film production with working title "<strong id="project-name">[Project Name]</strong>" Film.
+  Agreement with these terms and conditions constitute an agreement between parties which production in this thing represented by <strong id="production-house">[Production House]</strong> (next called <strong>Tenant Party</strong>) with party <strong>PT. WARNA GLOBAL SURYA</strong> as rental of film production equipment (next called <strong>Rental Party</strong>) for a Film production with working title "<strong class="project-name">[Project Name]</strong>" Film.
   </p>
 
   <p>
-  This agreement renting equipment for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text</em>“ gross for <strong id="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipment exceeds <strong id="total-days">[Shooting Days]</strong>, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+  This agreement renting equipment for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text</em>“ gross for <strong class="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipment exceeds <strong class="total-days">[Shooting Days]</strong>, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
   </p>
   </div>
   
@@ -127,16 +127,19 @@
     return txt.charAt(0).toUpperCase() + txt.substring(1).toLowerCase();
   });
 }
+    function formatRupiah(angka) {
+  return 'Rp' + parseInt(angka).toLocaleString('id-ID');
+}
 
 const textAmountRaw = numberToWords(parseInt(grandTotal));
 const textAmount = toTitleCase(textAmountRaw);
 
-    document.getElementById("project-name").innerText = projectName;
+    document.querySelectorAll(".project-name").forEach(el => el.innerText = projectName);
     document.getElementById("production-house").innerText = productionHouse;
     document.getElementById("shoot-date").innerText = date;
     document.getElementById("quote-number").innerText = quoteNumber;
-    document.getElementById("grand-total").innerText = grandTotal;
-    document.getElementById("total-days").innerText = totalDays;
+    document.getElementById("grand-total").innerText = formatRupiah(grandTotal);
+    document.querySelectorAll(".total-days").forEach(el => el.innerText = totalDays);
     document.getElementById("grand-total-text").innerText = `${textAmount}`;
   </script>
 
