--- a/quotation.html
+++ b/quotation.html
@@ -204,9 +204,17 @@
   <span>: <span id="client-name"></span></span>
   </div>
   <div class="label-row">
-  <span>Production House/Company</span>
+  <span>Production House</span>
   <span>: <span id="production-house"></span></span>
   </div>
+  <div class="label-row">
+  <span>Company</span>
+  <span>: <span id="company-name"></span></span>
+  </div>  
+   <div class="label-row">
+  <span>Company Address</span>
+  <span>: <span id="company-address"></span></span>
+  </div>  
   <div class="label-row">
   <span>Quotation Number</span>
   <span>: <span id="quote-number"></span></span>
@@ -282,6 +290,8 @@
     const urlParams = new URLSearchParams(window.location.search);
     const project = urlParams.get("project") || "";
     const productionHouse = urlParams.get("productionHouse") || "";
+    const company = urlParams.get("company") || "";
+    const companyAddress = urlParams.get("companyAddress") || "";
     const clientName = urlParams.get("clientName") || "";
     const quoteNumber = urlParams.get("quoteNumber") || "";
     const user = urlParams.get("user") || "";
@@ -306,6 +316,8 @@
 
     document.getElementById("project-name").innerText = project;
     document.getElementById("production-house").innerText = productionHouse;
+    document.getElementById("company-name").innerText = company;
+    document.getElementById("company-address").innerText = companyAddress;
     document.getElementById("client-name").innerText = clientName;
     document.getElementById("quote-number").innerText = quoteNumber;
     document.getElementById("total-cost-orders").innerText = formatCurrency(totalcostorders);
