--- a/quotation.html
+++ b/quotation.html
@@ -211,10 +211,7 @@
   <span>Company</span>
   <span>: <span id="company-name"></span></span>
   </div>  
-  <div class="label-row">
-  <span>Company Address</span>
-  <span>: <span id="company-address"></span></span>
-  </div>  
+  <p id="company-address";></p>
   <div class="label-row">
   <span>Quotation Number</span>
   <span>: <span id="quote-number"></span></span>
