--- a/quotation.html
+++ b/quotation.html
@@ -172,7 +172,7 @@
     font-family: Nunito, sans-serif;
 }
     .label-row span:first-child {
-    width: 250px;  /* Atur agar semua label panjangnya sama */
+    width: 150px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     white-space: nowrap;
     }
@@ -265,7 +265,7 @@
 
    <!-- After Discount -->
   <div class="label-row">
-  <span>Total Cost After Discount for Equipments</span>
+  <span>Equipments Cost after Discount</span>
   <span>: <span id="after-discount"></span></span>
   </div>
 
