--- a/quotation.html
+++ b/quotation.html
@@ -211,6 +211,10 @@
   <span>Company</span>
   <span>: <span id="company-name"></span></span>
   </div>  
+  <div class="label-row">
+  <span>Company Address</span>
+  <span>: <span></span></span>
+  </div>  
   <p id="company-address";></p>
   <div class="label-row">
   <span>Quotation Number</span>
@@ -265,7 +269,7 @@
 
    <!-- After Discount -->
   <div class="label-row">
-  <span>Equipments Cost after Discount</span>
+  <span>Equipments after Discount</span>
   <span>: <span id="after-discount"></span></span>
   </div>
 
