--- a/quotation.html
+++ b/quotation.html
@@ -198,7 +198,7 @@
 
 <div class="quotation-header">
   <div class="project-info">
-    <h2 style="font-size: 20px; font-weight: bold;" id="project-name"></h2>
+    <h2 style="font-size: 20px; font-weight: bold; margin-bottom: 20px;" id="project-name"></h2>
     <div class="label-row">
   <span>Submitted To</span>
   <span>: <span id="client-name"></span></span>
