--- a/contract.html
+++ b/contract.html
@@ -110,7 +110,7 @@
     const quoteNumber = urlParams.get("quoteNumber") || "";
     const grandTotal = urlParams.get("grandTotal") || "0";
     const totalDays = urlParams.get("totalDays") || "";
-    const totalTermin = Math.min(parseInt(params.get("totalTermin") || "0"), 5);
+    const totalTerm = Math.min(parseInt(params.get("totalTerm") || "0"), 5);
     const container = document.getElementById("container");
     
 
