--- a/contract.html
+++ b/contract.html
@@ -94,7 +94,7 @@
   </p>
 
   <p>
-  Production cost are divided into <stong><span id="totalTermin">[Total Termin]</span></stong> termin, which include : 
+  Production cost are divided into <stong><span id="total-termin">[Total Termin]</span></stong> termin, which include : 
   </p>
 
   <div id="terminContainer"></div>
@@ -185,7 +185,7 @@ const textAmount = toTitleCase(textAmountRaw);
     document.getElementById("grand-total").innerText = formatRupiah(grandTotal);
     document.querySelectorAll(".total-days").forEach(el => el.innerText = totalDays);
     document.getElementById("grand-total-text").innerText = `${textAmount}`;
-    document.getElementById("totalTerm").textContent = totalTerm;
+    document.getElementById("total-termin").textContent = totalTerm;
   </script>
 
 </body>
